2009-07-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More support for building out of the source tree.
	
	Fix compilation of SL programs when the main SL source is in
	$(builddir) and it includes some other files in $(srcdir). This
	appeared while testing auto-generation for SL code.
	
	* sl.mk: Append `-I$(srcdir)' to each invocation of `slc'. 

2009-07-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix tests.

	* tools/tests/2_args/globpass.sl: Use `svp_nop' instead of
	`d_putchar' which was removed long ago.

2009-07-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Import more tests from previous `utcc' tree.
	
	* tools/tests/0_trivial/if3.sl,
	* tools/tests/2_args/globpass.sl,
	* tools/tests/2_args/shareuse.sl,
	* tools/tests/2_args/sumunsigned.sl: Import code from
	S. Polstra. Adapt to use SL macro names.

2009-07-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update deployment makefiles to use latest simulator changes.
	
	* deploy/Makefile-reqs.orig (MGSIM_REV): Bump to r2513 with latest
	bug fixes.

2009-07-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update deployment makefiles to use latest binutils changes.
	
	* deploy/Makefile-reqs.orig (BINUTILS_REV): Bump to r2430 where
	LDFP was introduced.

2009-07-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve deployment makefiles.
	
	* deploy/reqs.mk: Copy slenv to $(PREFIX) when needed. Move REPO
	variables to...	
	* deploy/Makefile-reqs.orig: here, so they can be customized.

2009-07-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend test suite.
	
	* tools/tests/2_args/twoways.sl: New. Inspired from discussion
	with T. Bernard.

2009-07-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Move forward with `make check' on LL benchmark code.

	* programs/benchmarks/livermore/ll.slh: Remove structure
	definition (put arrays in global scope) to prevent the compiler
	from complaining the structure is too large. Adjust LARGEST to
	please the linker on MacOS X.
	
	* programs/benchmarks/livermore/bench1.bin.mtalpha.psize,